Commented out a line.

--- a/product_space_vae.ipynb
+++ b/product_space_vae.ipynb
@@ -819,7 +819,7 @@
         "               # [20, 10, 6, 1],\n",
         "               # [15, 10, 4, 3, 2, 1],\n",
         "               # [20, 20]]:\n",
-        "save_file_names = {}\n",
+        "# save_file_names = {}\n",
         "for version in save_file_names:\n",
         "    Z_DIMS = save_file_names[version]\n",
         "    # Z_DIMS = [2, 2]\n",
