--- a/product_space_vae.ipynb
+++ b/product_space_vae.ipynb
@@ -780,6 +780,24 @@
       "C:\\ProgramData\\Anaconda3\\envs\\ntk\\lib\\site-packages\\torch\\distributions\\distribution.py:45: UserWarning: <class 'hyperspherical_vae.distributions.hyperspherical_uniform.HypersphericalUniform'> does not define `arg_constraints`. Please set `arg_constraints = {}` or initialize the distribution with `validate_args=False` to turn off validation.\n",
       "  warnings.warn(f'{self.__class__} does not define `arg_constraints`. ' +\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'recon loss': -23.196541244279658, 'KL': 2.7919460088569235, 'ELBO': -25.988487253136583}\n",
+      "##### Product Space Hyper-spherical VAE #####\n",
+      "[3, 2]\n",
+      "{'recon loss': -12.681391839058168, 'KL': 3.6873143132206234, 'ELBO': -16.36870615227879}\n",
+      "##### Product Space Hyper-spherical VAE #####\n",
+      "[10, 10, 10, 10]\n",
+      "{'recon loss': -21.91185671046709, 'KL': 7.335589235686695, 'ELBO': -29.24744594615378}\n",
+      "##### Product Space Hyper-spherical VAE #####\n",
+      "[20, 10, 6, 1]\n",
+      "{'recon loss': -20.7835997067965, 'KL': 6.546653262891863, 'ELBO': -27.330252969688363}\n",
+      "##### Product Space Hyper-spherical VAE #####\n",
+      "[15, 10, 4, 3, 2, 1]\n"
+     ]
     }
    ],
    "source": [
