--- a/product_space_vae.ipynb
+++ b/product_space_vae.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "outputs": [
     {
      "name": "stdout",
@@ -796,7 +796,11 @@
       "[20, 10, 6, 1]\n",
       "{'recon loss': -20.7835997067965, 'KL': 6.546653262891863, 'ELBO': -27.330252969688363}\n",
       "##### Product Space Hyper-spherical VAE #####\n",
-      "[15, 10, 4, 3, 2, 1]\n"
+      "[15, 10, 4, 3, 2, 1]\n",
+      "{'recon loss': -31.932040699658263, 'KL': 10.44656860674231, 'ELBO': -42.37860930640058}\n",
+      "##### Product Space Hyper-spherical VAE #####\n",
+      "[20, 20]\n",
+      "{'recon loss': -11.908658065511926, 'KL': 2.566489924073334, 'ELBO': -14.475147989585261}\n"
      ]
     }
    ],
@@ -871,14 +875,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "def save_model(model_filename):\n",
@@ -897,8 +900,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
@@ -928,13 +930,28 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "5pU77s4PcESE",
-    "outputId": "cca7243d-6d28-47c4-865c-2fc8c04fb36e",
-    "pycharm": {
-     "is_executing": true
-    }
+    "outputId": "cca7243d-6d28-47c4-865c-2fc8c04fb36e"
    },
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 61,
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "mat1 and mat2 shapes cannot be multiplied (128x1816 and 1196x128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[61], line 17\u001B[0m\n\u001B[0;32m     14\u001B[0m modelS\u001B[38;5;241m.\u001B[39mload_state_dict(checkpoint[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mmodel_state_dict\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[0;32m     15\u001B[0m optimizerS\u001B[38;5;241m.\u001B[39mload_state_dict(checkpoint[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124moptimizer_state_dict\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m---> 17\u001B[0m \u001B[43mtest\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodelS\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizerS\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[58], line 14\u001B[0m, in \u001B[0;36mtest\u001B[1;34m(model, optimizer, device)\u001B[0m\n\u001B[0;32m      8\u001B[0m     x \u001B[38;5;241m=\u001B[39m X[i:, :]\u001B[38;5;241m.\u001B[39mto(device)\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m# dynamic binarization\u001B[39;00m\n\u001B[0;32m     11\u001B[0m \u001B[38;5;66;03m# x_mb = (x_mb > torch.distributions.Uniform(0, 1).sample(x_mb.shape)).float()\u001B[39;00m\n\u001B[0;32m     12\u001B[0m \n\u001B[0;32m     13\u001B[0m \u001B[38;5;66;03m# _, (q_z, p_z), _, x_mb_ = model(x_mb.reshape(-1, 784))\u001B[39;00m\n\u001B[1;32m---> 14\u001B[0m (q_zs, p_zs), z, mu_, sigma_square_ \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     16\u001B[0m \u001B[38;5;66;03m# print_['recon loss'].append(float(nn.BCEWithLogitsLoss(reduction='none')(x_mb_,\u001B[39;00m\n\u001B[0;32m     17\u001B[0m \u001B[38;5;66;03m# x_mb.reshape(-1, 784)).sum(-1).mean().data))\u001B[39;00m\n\u001B[0;32m     18\u001B[0m \u001B[38;5;66;03m# library_size = torch.sum(x, dim=1, keepdim=True)\u001B[39;00m\n\u001B[0;32m     19\u001B[0m \u001B[38;5;66;03m# mu_ = mu_* library_size\u001B[39;00m\n\u001B[0;32m     20\u001B[0m \u001B[38;5;66;03m# print_['recon loss'].append(float(torch.mean(log_likelihood_nb(x, mu_, sigma_square_)).data))\u001B[39;00m\n\u001B[0;32m     21\u001B[0m print_[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrecon loss\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;28mfloat\u001B[39m(torch\u001B[38;5;241m.\u001B[39mmean(log_likelihood_student(x, mu_, sigma_square_, df\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5.0\u001B[39m))\u001B[38;5;241m.\u001B[39mdata))\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\ntk\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[1;34m(self, *input, **kwargs)\u001B[0m\n\u001B[0;32m   1190\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[0;32m   1191\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[0;32m   1192\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[0;32m   1193\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[1;32m-> 1194\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m forward_call(\u001B[38;5;241m*\u001B[39m\u001B[38;5;28minput\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m   1195\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[0;32m   1196\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "Cell \u001B[1;32mIn[54], line 230\u001B[0m, in \u001B[0;36mProductSpaceVAE.forward\u001B[1;34m(self, x, n)\u001B[0m\n\u001B[0;32m    228\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, x, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m--> 230\u001B[0m     z_means, z_vars \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mencode\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    231\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m torch\u001B[38;5;241m.\u001B[39misnan(z_means[\u001B[38;5;241m0\u001B[39m])\u001B[38;5;241m.\u001B[39msum() \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m torch\u001B[38;5;241m.\u001B[39misnan(z_vars[\u001B[38;5;241m0\u001B[39m])\u001B[38;5;241m.\u001B[39msum() \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[0;32m    232\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m (\u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;28;01mNone\u001B[39;00m), \u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;28;01mNone\u001B[39;00m\n",
+      "Cell \u001B[1;32mIn[54], line 98\u001B[0m, in \u001B[0;36mProductSpaceVAE.encode\u001B[1;34m(self, x)\u001B[0m\n\u001B[0;32m     87\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mencode\u001B[39m(\u001B[38;5;28mself\u001B[39m, x):\n\u001B[0;32m     88\u001B[0m     \u001B[38;5;66;03m# x = self.encoder_mlp(x)\u001B[39;00m\n\u001B[0;32m     89\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     95\u001B[0m \n\u001B[0;32m     96\u001B[0m     \u001B[38;5;66;03m# regularizer = torch.\u001B[39;00m\n\u001B[1;32m---> 98\u001B[0m     h \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mencoder_layer\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     99\u001B[0m     h \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mactivation(h)\n\u001B[0;32m    100\u001B[0m     \u001B[38;5;66;03m# Add in batch normalization here\u001B[39;00m\n\u001B[0;32m    101\u001B[0m     \u001B[38;5;66;03m# h = self.encoder_batch_norm[0](h)\u001B[39;00m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\ntk\\lib\\site-packages\\torch\\nn\\modules\\module.py:1194\u001B[0m, in \u001B[0;36mModule._call_impl\u001B[1;34m(self, *input, **kwargs)\u001B[0m\n\u001B[0;32m   1190\u001B[0m \u001B[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001B[39;00m\n\u001B[0;32m   1191\u001B[0m \u001B[38;5;66;03m# this function, and just call forward.\u001B[39;00m\n\u001B[0;32m   1192\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m (\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_backward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_forward_pre_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_backward_hooks\n\u001B[0;32m   1193\u001B[0m         \u001B[38;5;129;01mor\u001B[39;00m _global_forward_hooks \u001B[38;5;129;01mor\u001B[39;00m _global_forward_pre_hooks):\n\u001B[1;32m-> 1194\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m forward_call(\u001B[38;5;241m*\u001B[39m\u001B[38;5;28minput\u001B[39m, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m   1195\u001B[0m \u001B[38;5;66;03m# Do not call functions when jit is used\u001B[39;00m\n\u001B[0;32m   1196\u001B[0m full_backward_hooks, non_full_backward_hooks \u001B[38;5;241m=\u001B[39m [], []\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\ntk\\lib\\site-packages\\torch\\nn\\modules\\linear.py:114\u001B[0m, in \u001B[0;36mLinear.forward\u001B[1;34m(self, input)\u001B[0m\n\u001B[0;32m    113\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mforward\u001B[39m(\u001B[38;5;28mself\u001B[39m, \u001B[38;5;28minput\u001B[39m: Tensor) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m Tensor:\n\u001B[1;32m--> 114\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mF\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlinear\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mweight\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mbias\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: mat1 and mat2 shapes cannot be multiplied (128x1816 and 1196x128)"
+     ]
+    }
+   ]
   }
  ]
 }
